interim check-in with complete set of almost-completely functional ViewBeans
git-svn-id: https://svn.forgerock.org/openam/branches/rest_sts_view_bean@9847 0f4defcf-c51a-4c67-9f44-6fb5eba73c5d

--- a/openam-core/src/main/resources/amConsole.properties
+++ b/openam-core/src/main/resources/amConsole.properties
@@ -4545,19 +4545,22 @@ tab.configuration.reststs.status=Click to configure rest sts instances
 
 
 #Properties for RestSTSHomeViewBean
-reststs.home.page.title={0} - Rest STS Instances
-reststs.home.instances.table.name=Rest STS Instances
-reststs.home.instances.table.summary=Rest STS Instances
-reststs.home.instances.table.empty.message=No published Rest STS instances
-reststs.home.instances.table.button.new=Add...
-reststs.home.instances.table.button.delete=Remove
-reststs.home.instances.table.column.name=Name
-reststs.home.instances.table.action.column.name=Action
+rest.sts.home.page.title={0} - Rest STS Instances
+rest.sts.home.instances.table.name=Rest STS Instances
+rest.sts.home.instances.table.summary=Rest STS Instances
+rest.sts.home.instances.table.empty.message=No published Rest STS instances
+rest.sts.home.instances.table.button.new=Add...
+rest.sts.home.instances.table.button.delete=Remove
+rest.sts.home.instances.table.column.name=Name
+rest.sts.home.instances.table.action.column.name=Action
+rest.sts.home.instance.deleted=Rest STS instance deleted
+rest.sts.home.instances.deleted=Rest STS instances deleted
 
-reststs.home.instance.deleted=Rest STS instance deleted
-reststs.home.instances.deleted=Rest STS instances deleted
+#Properties for the RestSTSEditViewBean
+rest.sts.edit.page.title=update rest sts instance
 
-# Properties for the RestSecurityTokenServiceViewBean
+# Properties for the propertyRestSecurityTokenService.xml file, which displays the properties for the RestSTSAdd
+# and RestSTSEdit view beans
 rest.sts.keystore.section.title=Keystore Configuration
 rest.sts.keystore.filename=Keystore Path
 rest.sts.keystore.filename.help=Provide either the full filesystem path to a filesystem resident keystore, or a \
