now with (apparently) all elements of ViewBean set functionality working
git-svn-id: https://svn.forgerock.org/openam/branches/rest_sts_view_bean@9849 0f4defcf-c51a-4c67-9f44-6fb5eba73c5d

--- a/openam-core/src/main/resources/amConsole.properties
+++ b/openam-core/src/main/resources/amConsole.properties
@@ -4544,7 +4544,7 @@ tab.configuration.reststs.tooltip=Click to configure rest sts instances
 tab.configuration.reststs.status=Click to configure rest sts instances
 
 
-#Properties for RestSTSHomeViewBean
+#Properties for RestSTSHomeViewBean and associated .jsp page.
 rest.sts.home.page.title={0} - Rest STS Instances
 rest.sts.home.instances.table.name=Rest STS Instances
 rest.sts.home.instances.table.summary=Rest STS Instances
@@ -4650,8 +4650,6 @@ rest.sts.tokentransforms.help=In X->Y, X refers to the input token type, and Y r
   created during the authentication of the presented input token type, should be invalidated following the creation of the \
   output token type.
 rest.sts.deployment.section.title=Deployment Configuration
-rest.sts.deployment.realm=Deployment Realm
-rest.sts.deployment.realm.help=Realm must exist. STS endpoint url will composed of rest-sts/realm/uriElement
 rest.sts.deployment.UrlElement=Deployment Url Element
 rest.sts.deployment.UrlElement.help=STS endpoint Url will be composed of rest-sts/realm/uriElement
 rest.sts.deployment.AuthTargetMappings=Authentication Target Mappings
