I18N work, and shared constants in a shared class
git-svn-id: https://svn.forgerock.org/openam/branches/rest_sts_view_bean@9888 0f4defcf-c51a-4c67-9f44-6fb5eba73c5d

--- a/openam-core/src/main/resources/amConsole.properties
+++ b/openam-core/src/main/resources/amConsole.properties
@@ -4665,3 +4665,15 @@ rest.sts.deployment.AuthTargetMappings.help=Each deployed STS is configured with
   Id token will be placed. For this example, the following string would define these configurations: \
   OPENIDCONNECT;module;oidc;oidc_id_token_auth_target_header_key=oidc_id_token. In this case, 'oidc' is the name of the \
   Open Id Connect authentication module created to authenticate Open Id Connect tokens.
+
+#message properties displayed by the model and view-beans
+rest.sts.validation.token.lifetime.message=Saml2 token lifetime must be specified
+rest.sts.validation.deployment.url.message=Deyployment Url element must be specified.
+rest.sts.validation.deployment.url.content.message=Deployment Url element can neither start, end, nor contain, the '/' character.
+rest.sts.validation.issuername.message=Issuer name must be specified.
+rest.sts.validation.keystore.filename.message=Keystore filename must be specified.
+rest.sts.validation.keystore.password.message=Keystore password must be specified.
+rest.sts.validation.keystore.signature.keyalias.message=Keystore signature key alias must be specified.
+rest.sts.validation.keystore.signature.keypassword.message=Keystore signature key password must be specified.
+rest.sts.validation.keystore.encryption.keyalias.message=Keystore encryption key alias must be specified.
+rest.sts.validation.keystore.encryption.keypassword.message=Keystore encryption key password must be specified.
