changes resulting from CR-3797
git-svn-id: https://svn.forgerock.org/openam/branches/rest_sts_view_bean@9906 0f4defcf-c51a-4c67-9f44-6fb5eba73c5d

--- a/openam-core/src/main/resources/amConsole.properties
+++ b/openam-core/src/main/resources/amConsole.properties
@@ -4620,12 +4620,16 @@ rest.sts.saml2.Audiences.help=Values will be used to populate the Audiences of t
 saml2_attribute_map=Specification of mapped attributes
 rest.sts.saml2.AttributeMap=Attribute Mappings
 rest.sts.saml2.AttributeMap.help=Contains the mapping of saml attribute names (Map keys) to local OpenAM attributes (Map values) in \
-  various stores. The DefaultAttributeMapper looks at profile attributes in various places: \
-  LDAP or SQL, depending on data store setup, or in Session properties. The keys will define the name of the attributes \
+  configured data stores. The DefaultAttributeMapper looks at profile attributes in \
+  configured data stores, or in Session properties. The keys will define the name of the attributes \
   included in the Assertion Attribute statements, and the data pulled from the subject's directory entry or session state \
-  corresponding to the map value will define the value corresponding to this attribute name. If the attribute value is \
+  corresponding to the map value will define the value corresponding to this attribute name. The keys can have the format \
+  [NameFomatURI|]SAML ATTRIBUTE NAME. If the attribute value is \
   enclosed in quotes, that quoted value will be included in the attribute without mapping. Binary attributes should be \
-  followed by ';'.
+  followed by ';binary'. Examples: EmailAddress=mail, Address=postaladdress, \
+  urn:oasis:names:tc:SAML:2.0:attrname-format:uri|urn:mace:dir:attribute-def:cn=cn, partnerID="staticPartnerIDValue", \
+  urn:oasis:names:tc:SAML:2.0:attrname-format:uri|nameID="staticNameIDValue", photo=photo;binary, \
+  urn:oasis:names:tc:SAML:2.0:attrname-format:uri|photo=photo;binary
 rest.sts.saml2.nameidformat.unspecified=urn:oasis:names:tc:SAML:1.0:nameid-format:unspecified
 rest.sts.saml2.nameidformat.entity=urn:oasis:names:tc:SAML:2.0:nameid-format:entity
 rest.sts.saml2.nameidformat.email=urn:oasis:names:tc:SAML:1.1:nameid-format:emailAddress
@@ -4644,7 +4648,7 @@ rest.sts.tranform.unt.saml2.false=UNT->SAML2;don't invalidate interim OpenAM ses
 rest.sts.tranform.oidc.saml2.true=OPENIDCONNECT->SAML2;invalidate interim OpenAM session
 rest.sts.tranform.oidc.saml2.false=OPENIDCONNECT->SAML2;don't invalidate interim OpenAM session
 rest.sts.tranform.openam.saml2.true=OPENAM->SAML2;invalidate interim OpenAM session
-rest.sts.tranform.openam.saml2.false="OPENAM->SAML2;don't invalidate interim OpenAM session
+rest.sts.tranform.openam.saml2.false=OPENAM->SAML2;don't invalidate interim OpenAM session
 rest.sts.tokentransforms.help=In X->Y, X refers to the input token type, and Y refers to the output token type \
   (currently limited to SAML2). The (don't) invalidate interim OpenAM session specifies whether the interim OpenAM session, \
   created during the authentication of the presented input token type, should be invalidated following the creation of the \
@@ -4657,13 +4661,13 @@ rest.sts.deployment.AuthTargetMappings.help=Each deployed STS is configured with
   input token type for each supported token transformation. For example, if the transformation \
   OPENIDCONNECT->SAML2 is supported, the STS instance must be configured with information specifying which elements of \
   the OpenAM restful authentication context needs to be consumed to validate the OPENIDCONNECT token. The elements of the\
-  configuration tuple are separated by ';'. The first element is the input token type in the token transform: i.e.\
+  configuration tuple are separated by '|'. The first element is the input token type in the token transform: i.e.\
   X509CERT, OPENIDCONNECT, USERNAME, or OPENAM. The second element is the authentication target - i.e. either 'module' \
   or 'service', and the third element is the name of the authentication module or service. The fourth (optional) element provides \
   the STS authentication context information about the to-be-consumed authentication context. If the Open Id Connect \
   authetentication module is to be consumed, a client must know the name of the header/cookie element where the Open Id Connect \
   Id token will be placed. For this example, the following string would define these configurations: \
-  OPENIDCONNECT;module;oidc;oidc_id_token_auth_target_header_key=oidc_id_token. In this case, 'oidc' is the name of the \
+  OPENIDCONNECT|module|oidc|oidc_id_token_auth_target_header_key=oidc_id_token. In this case, 'oidc' is the name of the \
   Open Id Connect authentication module created to authenticate Open Id Connect tokens.
 
 #message properties displayed by the model and view-beans
@@ -4677,3 +4681,4 @@ rest.sts.validation.keystore.signature.keyalias.message=Keystore signature key a
 rest.sts.validation.keystore.signature.keypassword.message=Keystore signature key password must be specified.
 rest.sts.validation.keystore.encryption.keyalias.message=Keystore encryption key alias must be specified.
 rest.sts.validation.keystore.encryption.keypassword.message=Keystore encryption key password must be specified.
+rest.sts.validation.tokentransforms.message=A set of Supported Token Transforms must be selected.
