final set of code review changes
git-svn-id: https://svn.forgerock.org/openam/branches/rest_sts_view_bean@9965 0f4defcf-c51a-4c67-9f44-6fb5eba73c5d

--- a/openam-core/src/main/resources/amConsole.properties
+++ b/openam-core/src/main/resources/amConsole.properties
@@ -4682,3 +4682,4 @@ rest.sts.validation.keystore.signature.keypassword.message=Keystore signature ke
 rest.sts.validation.keystore.encryption.keyalias.message=Keystore encryption key alias must be specified.
 rest.sts.validation.keystore.encryption.keypassword.message=Keystore encryption key password must be specified.
 rest.sts.validation.tokentransforms.message=A set of Supported Token Transforms must be selected.
+rest.sts.view.no.instance.message=No state corresponding to id {0}
