adding support for x509->saml2 transformation in the ui
git-svn-id: https://svn.forgerock.org/openam/branches/sts_x509@10208 0f4defcf-c51a-4c67-9f44-6fb5eba73c5d

--- a/openam-core/src/main/resources/amConsole.properties
+++ b/openam-core/src/main/resources/amConsole.properties
@@ -4643,12 +4643,14 @@ rest.sts.general.section.title=General Configuration
 rest.sts.issuerName=The issuer name
 rest.sts.issuerName.help.txt=Will appear in the Issuer element of issued SAML2 assertions
 rest.sts.tokentransforms=Supported Token Transforms
-rest.sts.tranform.unt.saml2.true=UNT->SAML2;invalidate interim OpenAM session
-rest.sts.tranform.unt.saml2.false=UNT->SAML2;don't invalidate interim OpenAM session
-rest.sts.tranform.oidc.saml2.true=OPENIDCONNECT->SAML2;invalidate interim OpenAM session
-rest.sts.tranform.oidc.saml2.false=OPENIDCONNECT->SAML2;don't invalidate interim OpenAM session
-rest.sts.tranform.openam.saml2.true=OPENAM->SAML2;invalidate interim OpenAM session
-rest.sts.tranform.openam.saml2.false=OPENAM->SAML2;don't invalidate interim OpenAM session
+rest.sts.transform.unt.saml2.true=UNT->SAML2;invalidate interim OpenAM session
+rest.sts.transform.unt.saml2.false=UNT->SAML2;don't invalidate interim OpenAM session
+rest.sts.transform.oidc.saml2.true=OPENIDCONNECT->SAML2;invalidate interim OpenAM session
+rest.sts.transform.oidc.saml2.false=OPENIDCONNECT->SAML2;don't invalidate interim OpenAM session
+rest.sts.transform.openam.saml2.true=OPENAM->SAML2;invalidate interim OpenAM session
+rest.sts.transform.openam.saml2.false=OPENAM->SAML2;don't invalidate interim OpenAM session
+rest.sts.transform.x509.saml2.true=x509->SAML2;invalidate interim OpenAM session
+rest.sts.transform.x509.saml2.false=x509->SAML2;don't invalidate interim OpenAM session
 rest.sts.tokentransforms.help=In X->Y, X refers to the input token type, and Y refers to the output token type \
   (currently limited to SAML2). The (don't) invalidate interim OpenAM session specifies whether the interim OpenAM session, \
   created during the authentication of the presented input token type, should be invalidated following the creation of the \
