--- a/openam/openam-core/src/main/resources/amSession.properties
+++ b/openam/openam-core/src/main/resources/amSession.properties
@@ -91,10 +91,10 @@ a121=Session Persistence and High Availability Failover Enabled
 a121.help=Enabling provides full Session persistence and when coupled with a clustered environment provides Session High availability Failover as well.
 a121b=DN Restriction Only Enabled
 a121b.help=If enabled, OpenAM will not perform DNS lookups when checking restrictions in cookie hijacking mode.
-a121c.session.crosstalk.enabled=Crosstalk Enabled
-a121c.session.crosstalk.enabled.help=If enabled then OpenAM instances will talk to each other to resolve non-local \
-  sessions rather than using session persistence. Defaults to off if session persistence is enabled. Will be silently \
-  enabled if session persistence is disabled.
+a121c.session.reduced.crosstalk.enabled=Reduced Crosstalk Enabled
+a121c.session.reduced.crosstalk.enabled.help=If enabled then OpenAM instances will avoid talking to each other to \
+  resolve non-local sessions, and use session persistence instead. Defaults to on if session persistence is enabled. \
+  Will be silently disabled if session persistence is disabled.
 a122=Enable Session Trimming
 a123=Session Timeout Handler implementations
 a123.help=Here you can list your session timeout handler implementations. You need to supply fully qualified names for the impl classes.
