--- a/openam/openam-core/src/main/resources/amSession.properties
+++ b/openam/openam-core/src/main/resources/amSession.properties
@@ -95,6 +95,9 @@ a121c.session.reduced.crosstalk.enabled=Reduced Crosstalk Enabled
 a121c.session.reduced.crosstalk.enabled.help=If enabled then OpenAM instances will avoid talking to each other to \
   resolve non-local sessions, and use session persistence instead. Defaults to on if session persistence is enabled. \
   Will be silently disabled if session persistence is disabled.
+a121d.session.destroy.logout.broadcast=Session Logout/Destroy Broadcast
+a121d.session.destroy.logout.broadcast.help=When a session is logged out or destroyed, this can be broadcast to other \
+  servers so that they can block any requests that arrive before reduced crosstalk replication has taken place.
 a122=Enable Session Trimming
 a123=Session Timeout Handler implementations
 a123.help=Here you can list your session timeout handler implementations. You need to supply fully qualified names for the impl classes.
@@ -114,3 +117,6 @@ choiceDestroyOldSession=DESTROY_OLDEST_SESSION
 choiceDestroyAll=DESTROY_OLD_SESSIONS
 i18nTrue=Enabled
 i18nFalse=Disabled
+choiceBroadcastOff=Disabled
+choiceBroadcastToLocalSite=Broadcast only to local site servers
+choiceBroadcastToAllSites=Broadcast to servers in all sites
