--- a/openam-core/src/main/resources/amConsole.properties
+++ b/openam-core/src/main/resources/amConsole.properties
@@ -4664,13 +4664,20 @@ rest.sts.deployment.AuthTargetMappings.help=Each deployed STS is configured with
   OPENIDCONNECT->SAML2 is supported, the STS instance must be configured with information specifying which elements of \
   the OpenAM restful authentication context needs to be consumed to validate the OPENIDCONNECT token. The elements of the\
   configuration tuple are separated by '|'. The first element is the input token type in the token transform: i.e.\
-  X509CERT, OPENIDCONNECT, USERNAME, or OPENAM. The second element is the authentication target - i.e. either 'module' \
+  X509, OPENIDCONNECT, USERNAME, or OPENAM. The second element is the authentication target - i.e. either 'module' \
   or 'service', and the third element is the name of the authentication module or service. The fourth (optional) element provides \
-  the STS authentication context information about the to-be-consumed authentication context. If the Open Id Connect \
-  authetentication module is to be consumed, a client must know the name of the header/cookie element where the Open Id Connect \
+  the STS authentication context information about the to-be-consumed authentication context. When transforming Open Id Connect \
+  Id tokens, the Open Id Connect authentication module must be consumed, and thus a deployed rest-sts instance must be configured \
+  with the name of the header/cookie element where the Open Id Connect \
   Id token will be placed. For this example, the following string would define these configurations: \
   OPENIDCONNECT|module|oidc|oidc_id_token_auth_target_header_key=oidc_id_token. In this case, 'oidc' is the name of the \
-  Open Id Connect authentication module created to authenticate Open Id Connect tokens.
+  Open Id Connect authentication module created to authenticate Open Id Connect tokens. When transforming a X509 Certificate, \
+  the Certificate module must be consumed, and the published rest-sts instance must be configured with the name of the \
+  Certificate module (or the service containing the module), and the header name configured for the Certificate module \
+  corresponding to where the Certificate module can expect to find the to-be-validated Certificate. The following string \
+  would define these configurations: X509|module|cert_module|x509_token_token_auth_target_header_key=client_cert. In this \
+  case 'cert_module' is the name of the Certificate module, and client_cert is the header name where Certificate module \
+  has been configured to find the client's Certificate.
 
 #message properties displayed by the model and view-beans
 rest.sts.validation.token.lifetime.message=Saml2 token lifetime must be specified
