exposing the configuration of the header corresponding to the client cert location in the tls offload case in the rest-sts UI.
git-svn-id: https://svn.forgerock.org/openam/branches/sts_x509@10298 0f4defcf-c51a-4c67-9f44-6fb5eba73c5d

--- a/openam-core/src/main/resources/amConsole.properties
+++ b/openam-core/src/main/resources/amConsole.properties
@@ -4576,7 +4576,7 @@ rest.sts.saml2.NameIdFormat=NameIdFormat
 rest.sts.saml2.TokenLifetime=Token Lifetime (Seconds)
 rest.sts.saml2.CustomConditionsProviderClassName=Custom Conditions Provider Class Name (optional)
 rest.sts.saml2.CustomConditionsProviderClassName.help=If the Conditions of the issued SAML2 assertion \
-  needs to be customized, implement the org.forgerock.openam.sts.tokengeneration.saml2.statements.ConditionsProvider \
+  need to be customized, implement the org.forgerock.openam.sts.tokengeneration.saml2.statements.ConditionsProvider \
   interface, and specify the class name of the implementation here.
 rest.sts.saml2.CustomSubjectProviderClassName=Customs Subject Provider Class Name (optional)
 rest.sts.saml2.CustomSubjectProviderClassName.help=If the Subject of the issued SAML2 assertion \
@@ -4678,7 +4678,14 @@ rest.sts.deployment.AuthTargetMappings.help=Each deployed STS is configured with
   would define these configurations: X509|module|cert_module|x509_token_token_auth_target_header_key=client_cert. In this \
   case 'cert_module' is the name of the Certificate module, and client_cert is the header name where Certificate module \
   has been configured to find the client's Certificate.
-
+rest.sts.deployment.TwoWayTLSHeaderKey=Client Certificate Header Key
+rest.sts.deployment.TwoWayTLSHeaderKey.help=Token transformation which take X509 Certificates as the input token require that \
+  the X509 Certficate be presented via two-way TLS, so that the TLS handshake can validate client certificate ownership. \
+  A standard means of obtaining the client certificate presented via two-way TLS is via the javax.servlet.request.X509Certificate \
+  attribute in the ServletRequest. However, in TLS-offloaded deployments, the TLS-offloader must communicate the client \
+  certificate to its ultimate destination via an Http header. If this rest-sts instance is to support token transformations \
+  with X509 Certificate input, and OpenAM will be deployed in a TLS-offloaded context, then this value must be set to the \
+  header value which the TLS-offloading engine will use to set client certificates presented via the TLS handshake.
 #message properties displayed by the model and view-beans
 rest.sts.validation.token.lifetime.message=Saml2 token lifetime must be specified
 rest.sts.validation.deployment.url.message=Deyployment Url element must be specified.
