--- a/openam-core/src/main/resources/restSTS.properties
+++ b/openam-core/src/main/resources/restSTS.properties
@@ -12,6 +12,14 @@ deployment_auth_target_mappings.help.txt=Some authN modules require additional s
   authN module expects the IdToken in a specific header. The final key=value entry following the final ';' stipulates \
   this context. The key must be oidc_id_token_auth_target_header_key, and the value corresponding to the header value \
   configured for the OpenIDConnect authN module.
+deployment_offloaded_two_way_tls_header_key=Client Certificate Header Key
+deployment_offloaded_two_way_tls_header_key.help.txt=Token transformation which take X509 Certificates as the input token require that \
+  the X509 Certficate be presented via two-way TLS, so that the TLS handshake can validate client certificate ownership. \
+  A standard means of obtaining the client certificate presented via two-way TLS is via the javax.servlet.request.X509Certificate \
+  attribute in the ServletRequest. However, in TLS-offloaded deployments, the TLS-offloader must communicate the client \
+  certificate to its ultimate destination via an Http header. If this rest-sts instance is to support token transformations \
+  with X509 Certificate input, and OpenAM will be deployed in a TLS-offloaded context, then this value must be set to the \
+  header value which the TLS-offloading engine will use to set client certificates presented via the TLS handshake.
 supported_token_transforms=Listing of support token transformations
 supported_token_transforms.help=Entry format:input_token_type;output_token_type;{true|false}, where true|false indicates \
   whether the interim OpenAM session is invalidated following token issuance.
