AME-4298, CR-4390 - Introduce 'Reduced Crosstalk Purge Delay' configuration variable
The 'Reduced Crosstalk Purge Delay' variable defines the length of time (in minutes) that remote
sessions are retained in the Session.sessionTable in order to avoid a stale read from CTS allowing
use of a destroyed session from a remote OpenAM server.

git-svn-id: https://svn.forgerock.org/openam/branches/AME-3423@10344 0f4defcf-c51a-4c67-9f44-6fb5eba73c5d

--- a/openam/openam-core/src/main/resources/amSession.properties
+++ b/openam/openam-core/src/main/resources/amSession.properties
@@ -98,6 +98,9 @@ a121c.session.reduced.crosstalk.enabled.help=If enabled then OpenAM instances wi
 a121d.session.destroy.logout.broadcast=Session Logout/Destroy Broadcast
 a121d.session.destroy.logout.broadcast.help=When a session is logged out or destroyed, this can be broadcast to other \
   servers so that they can block any requests that arrive before reduced crosstalk replication has taken place.
+a121e.session.reduced.crosstalk.purge.delay=Reduced Crosstalk Purge Delay
+a121e.session.reduced.crosstalk.purge.delay.help=The number of minutes to retain a copy of a session in a \
+  destroyed state in order to block any requests that arrive before reduced crosstalk replication has taken place.
 a122=Enable Session Trimming
 a123=Session Timeout Handler implementations
 a123.help=Here you can list your session timeout handler implementations. You need to supply fully qualified names for the impl classes.
