Set of changes to expose the set of tls offload engine hosts in the UI
git-svn-id: https://svn.forgerock.org/openam/branches/sts_x509@10386 0f4defcf-c51a-4c67-9f44-6fb5eba73c5d

--- a/openam-core/src/main/resources/amConsole.properties
+++ b/openam-core/src/main/resources/amConsole.properties
@@ -4686,6 +4686,13 @@ rest.sts.deployment.TwoWayTLSHeaderKey.help=Token transformation which take X509
   certificate to its ultimate destination via an Http header. If this rest-sts instance is to support token transformations \
   with X509 Certificate input, and OpenAM will be deployed in a TLS-offloaded context, then this value must be set to the \
   header value which the TLS-offloading engine will use to set client certificates presented via the TLS handshake.
+rest.sts.deployment.TLSOffloadEngineHosts=Trusted Remote Hosts
+rest.sts.deployment.TLSOffloadEngineHosts.help=Token transformation which take X509 Certificates as the input token require that \
+  the X509 Certficate be presented via two-way TLS, so that the TLS handshake can validate client certificate ownership. \
+  If OpenAM is deployed in a TLS-offloaded environment, in which the TLS-offloader must communicate the client certificate \
+  to the rest-sts via an Http header, this certificate will only be accepted if the ip address(es) of the TLS-offload engines \
+  are specified in this list. Specify 'any' if a client certificate can be presented in the specified header by any rest-sts \
+  client.
 #message properties displayed by the model and view-beans
 rest.sts.validation.token.lifetime.message=Saml2 token lifetime must be specified
 rest.sts.validation.deployment.url.message=Deyployment Url element must be specified.
