--- a/openam-core/src/main/resources/restSTS.properties
+++ b/openam-core/src/main/resources/restSTS.properties
@@ -20,6 +20,13 @@ deployment_offloaded_two_way_tls_header_key.help.txt=Token transformation which 
   certificate to its ultimate destination via an Http header. If this rest-sts instance is to support token transformations \
   with X509 Certificate input, and OpenAM will be deployed in a TLS-offloaded context, then this value must be set to the \
   header value which the TLS-offloading engine will use to set client certificates presented via the TLS handshake.
+deployment_tls_offload_engine_hosts=Trusted Remote Hosts
+deployment_tls_offload_engine_hosts.help.txt=Token transformation which take X509 Certificates as the input token require that \
+  the X509 Certficate be presented via two-way TLS, so that the TLS handshake can validate client certificate ownership. \
+  If OpenAM is deployed in a TLS-offloaded environment, in which the TLS-offloader must communicate the client certificate \
+  to the rest-sts via an Http header, this certificate will only be accepted if the ip address(es) of the TLS-offload engines \
+  are specified in this list. Specify 'any' if a client certificate can be presented in the specified header by any rest-sts \
+  client.
 supported_token_transforms=Listing of support token transformations
 supported_token_transforms.help=Entry format:input_token_type;output_token_type;{true|false}, where true|false indicates \
   whether the interim OpenAM session is invalidated following token issuance.
