AME-3423: Merging changes from trunk
git-svn-id: https://svn.forgerock.org/openam/branches/AME-3423@10396 0f4defcf-c51a-4c67-9f44-6fb5eba73c5d

--- a/openam-agents/jee-agents/jee-agents-agentapp/pom.xml
+++ b/openam-agents/jee-agents/jee-agents-agentapp/pom.xml
@@ -32,6 +32,13 @@
     <artifactId>jee-agents-agentapp</artifactId>
     <packaging>war</packaging>
 
+    <dependencies>
+        <dependency>
+            <groupId>org.forgerock.openam.agents</groupId>
+            <artifactId>jee-agents-sdk</artifactId>
+            <scope>provided</scope>
+        </dependency>
+    </dependencies>
     <build>
       <plugins>
         <plugin>
