--- a/openam-agents/jee-agents/jee-agents-distribution/jee-agents-distribution-appserver-v10/src/main/assembly/config/OpenSSOAgentLogConfig.properties
+++ b/openam-agents/jee-agents/jee-agents-distribution/jee-agents-distribution-appserver-v10/src/main/assembly/config/OpenSSOAgentLogConfig.properties
@@ -24,7 +24,7 @@
 #
 # $Id: OpenSSOAgentLogConfig.properties,v 1.2 2008/08/19 19:13:39 veiming Exp $
 #
-# Portions Copyrighted 2013 ForgeRock AS.
+# Portions Copyrighted 2013-2014 ForgeRock AS.
 
 #------------------------------------------------------------------------------
 # Log Configuration Property File
@@ -32,7 +32,7 @@
 # OpenAM Policy Agent for:
 # Sun Java System Application Server 8.1/8.2/9.0/9.1
 #
-# Version: 3.0
+# Version: ${project.version}
 #------------------------------------------------------------------------------
 #
 # THIS FILE PROVIDES THE CONFIGURATION SETTINGS NECESSARY FOR THE AGENT
