--- a/openam-agents/jee-agents/jee-agents-distribution/jee-agents-distribution-jboss-v42/src/main/assembly/config/OpenSSOInstallerConfig.properties
+++ b/openam-agents/jee-agents/jee-agents-distribution/jee-agents-distribution-jboss-v42/src/main/assembly/config/OpenSSOInstallerConfig.properties
@@ -24,7 +24,7 @@
 #
 # $Id: OpenSSOInstallerConfig.properties,v 1.1 2008/12/11 14:40:32 naghaon Exp $
 #
-# Portions Copyrighted 2013 ForgeRock AS.
+# Portions Copyrighted 2013-2014 ForgeRock AS.
 
 
 #------------------------------------------------------------------------------
@@ -33,7 +33,7 @@
 # OpenAM Policy Agent for:
 # JBoss Server 4.x
 #
-# Version: 3.0
+# Version: ${project.version}
 #------------------------------------------------------------------------------
 #
 # THIS FILE PROVIDES THE CONFIGURATION SETTINGS NECESSARY FOR THE AGENT
