--- a/openam-agents/jee-agents/jee-agents-distribution/jee-agents-distribution-jsr196/src/main/assembly/config/OpenSSOAgentLogConfig.properties
+++ b/openam-agents/jee-agents/jee-agents-distribution/jee-agents-distribution-jsr196/src/main/assembly/config/OpenSSOAgentLogConfig.properties
@@ -24,7 +24,7 @@
 #
 # $Id: OpenSSOAgentLogConfig.properties,v 1.1 2009/01/30 12:06:18 kalpanakm Exp $
 
-# Portions Copyrighted 2013 ForgeRock AS.
+# Portions Copyrighted 2013-2014 ForgeRock AS.
 #
 #
 
@@ -34,7 +34,7 @@
 # OpenAM Policy Agent for:
 # GlassFish 2.1
 #
-# Version: 3.0
+# Version: ${project.version}
 #------------------------------------------------------------------------------
 #
 # THIS FILE PROVIDES THE CONFIGURATION SETTINGS NECESSARY FOR THE AGENT
