--- a/openam-agents/jee-agents/jee-agents-distribution/jee-agents-distribution-weblogic-v10/src/main/assembly/config/OpenSSOInstallerConfig.properties
+++ b/openam-agents/jee-agents/jee-agents-distribution/jee-agents-distribution-weblogic-v10/src/main/assembly/config/OpenSSOInstallerConfig.properties
@@ -24,7 +24,7 @@
 #
 # $Id: OpenSSOInstallerConfig.properties,v 1.2 2008/08/19 19:14:48 veiming Exp $
 #
-# Portions Copyrighted 2013 ForgeRock AS.
+# Portions Copyrighted 2013-2014 ForgeRock AS.
 
 #------------------------------------------------------------------------------
 # Tools Configuration Property File
@@ -32,7 +32,7 @@
 # OpenAM Policy Agent for:
 # BEA WebLogic 10.0 Server/Portal
 #
-# Version: 3.0
+# Version: ${project.version}
 #------------------------------------------------------------------------------
 #
 # THIS FILE PROVIDES THE CONFIGURATION SETTINGS NECESSARY FOR THE AGENT
