--- a/openam-agents/jee-agents/jee-agents-distribution/jee-agents-distribution-websphere-v61/src/main/assembly/config/OpenSSOAgentLogConfig.properties
+++ b/openam-agents/jee-agents/jee-agents-distribution/jee-agents-distribution-websphere-v61/src/main/assembly/config/OpenSSOAgentLogConfig.properties
@@ -24,7 +24,7 @@
 #
 # $Id: OpenSSOAgentLogConfig.properties,v 1.1 2008/11/21 22:21:47 leiming Exp $
 #
-# Portions Copyrighted 2010-2013 ForgeRock AS.
+# Portions Copyrighted 2010-2014 ForgeRock AS.
 
 #------------------------------------------------------------------------------
 # Log Configuration Property File
@@ -32,7 +32,7 @@
 # OpenAM Policy Agent for:
 # IBM Websphere 6.1
 #
-# Version: 3.0
+# Version: ${project.version}
 #------------------------------------------------------------------------------
 #
 # THIS FILE PROVIDES THE CONFIGURATION SETTINGS NECESSARY FOR THE AGENT
