--- a/openam-agents/jee-agents/jee-agents-distribution/jee-agents-distribution-appserver-v10/src/main/assembly/config/OpenSSOAgentConfiguration.template
+++ b/openam-agents/jee-agents/jee-agents-distribution/jee-agents-distribution-appserver-v10/src/main/assembly/config/OpenSSOAgentConfiguration.template
@@ -32,7 +32,7 @@
 # OpenAM Policy Agent for:
 # Sun Java System Application Server 8.1/8.2/9.0/9.1
 #
-# Version: 3.0
+# Version: ${project.version}
 
 #------------------------------------------------------------------------------
 #
