--- a/openam-agents/jee-agents/jee-agents-distribution/jee-agents-distribution-jboss-v42/src/main/assembly/config/OpenSSOAgentConfiguration.template
+++ b/openam-agents/jee-agents/jee-agents-distribution/jee-agents-distribution-jboss-v42/src/main/assembly/config/OpenSSOAgentConfiguration.template
@@ -32,7 +32,7 @@
 # OpenAM Policy Agent for:
 # Jboss server 4.x
 #
-# Version: 3.0
+# Version: ${project.version}
 
 #------------------------------------------------------------------------------
 #
