--- a/openam-agents/jee-agents/jee-agents-distribution/jee-agents-distribution-jboss-v7/src/main/assembly/config/OpenSSOAgentConfiguration.template
+++ b/openam-agents/jee-agents/jee-agents-distribution/jee-agents-distribution-jboss-v7/src/main/assembly/config/OpenSSOAgentConfiguration.template
@@ -24,7 +24,7 @@
 #
 # $Id: OpenSSOAgentConfiguration.template,v 1.3 2009/10/15 23:34:10 leiming Exp $
 #
-# Portions Copyrighted 2013-2014 ForgeRock Inc.
+# Portions Copyrighted 2013-2014 ForgeRock AS.
 
 #------------------------------------------------------------------------------
 # Configuration Property File
@@ -32,7 +32,7 @@
 # OpenAM Policy Agent for:
 # Jboss server 7.x
 #
-# Version: 3.0
+# Version: ${project.version}
 
 #------------------------------------------------------------------------------
 #
