--- a/openam-agents/jee-agents/jee-agents-distribution/jee-agents-distribution-jetty-v61/src/main/assembly/config/OpenSSOAgentBootstrap.template
+++ b/openam-agents/jee-agents/jee-agents-distribution/jee-agents-distribution-jetty-v61/src/main/assembly/config/OpenSSOAgentBootstrap.template
@@ -24,7 +24,7 @@
 #
 # $Id: OpenSSOAgentBootstrap.template,v 1.1 2009/01/21 18:28:42 kanduls Exp $
 #
-# Portions Copyrighted 2010-2013 ForgeRock AS.
+# Portions Copyrighted 2010-2014 ForgeRock AS.
 
 #------------------------------------------------------------------------------
 # J2EE Agents Bootstrap File
@@ -32,7 +32,7 @@
 # OpenAM Policy Agent for:
 # Jetty 6.1.x
 #
-# Version: 3.0
+# Version: ${project.version}
 #------------------------------------------------------------------------------
 #
 # THIS FILE PROVIDES THE CONFIGURATION SETTINGS NECESSARY FOR THE AGENT
