--- a/openam-agents/jee-agents/jee-agents-distribution/jee-agents-distribution-jetty-v7/src/main/assembly/config/OpenSSOAgentLogConfig.properties
+++ b/openam-agents/jee-agents/jee-agents-distribution/jee-agents-distribution-jetty-v7/src/main/assembly/config/OpenSSOAgentLogConfig.properties
@@ -24,7 +24,7 @@
 #
 # $Id: OpenSSOAgentLogConfig.properties,v 1.1 2009/01/21 18:28:44 kanduls Exp $
 #
-# Portions Copyrighted 2013 ForgeRock AS.
+# Portions Copyrighted 2013-2014 ForgeRock AS.
 
 #------------------------------------------------------------------------------
 # Log Configuration Property File
@@ -32,7 +32,7 @@
 # OpenAM Policy Agent for:
 # Jetty 7.x
 #
-# Version: 3.0
+# Version: ${project.version}
 #------------------------------------------------------------------------------
 #
 # THIS FILE PROVIDES THE CONFIGURATION SETTINGS NECESSARY FOR THE AGENT
