--- a/openam-agents/jee-agents/jee-agents-distribution/jee-agents-distribution-jsr196/src/main/assembly/config/OpenSSOInstallerConfig.properties
+++ b/openam-agents/jee-agents/jee-agents-distribution/jee-agents-distribution-jsr196/src/main/assembly/config/OpenSSOInstallerConfig.properties
@@ -24,7 +24,7 @@
 #
 # $Id: OpenSSOInstallerConfig.properties,v 1.1 2009/01/30 12:06:18 kalpanakm Exp $
 #
-# Portions Copyrighted 2013 ForgeRock AS.
+# Portions Copyrighted 2013-2014 ForgeRock AS.
 
 #------------------------------------------------------------------------------
 # Tools Configuration Property File
@@ -32,7 +32,7 @@
 # OpenAM Policy Agent for:
 # Glassfish 2.1
 #
-# Version: 3.0
+# Version: ${project.version}
 #------------------------------------------------------------------------------
 #
 # THIS FILE PROVIDES THE CONFIGURATION SETTINGS NECESSARY FOR THE AGENT
