--- a/openam-agents/jee-agents/jee-agents-distribution/jee-agents-distribution-tomcat-v6/src/main/assembly/config/OpenSSOAgentConfiguration.template
+++ b/openam-agents/jee-agents/jee-agents-distribution/jee-agents-distribution-tomcat-v6/src/main/assembly/config/OpenSSOAgentConfiguration.template
@@ -33,7 +33,7 @@
 # OpenAM Policy Agent for:
 # Tomcat 6.0.x
 #
-# Version: 3.0
+# Version: ${project.version}
 #------------------------------------------------------------------------------
 #
 # THIS FILE PROVIDES THE CONFIGURATION SETTINGS NECESSARY FOR THE AGENT
