--- a/openam-agents/jee-agents/jee-agents-distribution/jee-agents-distribution-weblogic-v10/src/main/assembly/config/OpenSSOAgentConfiguration.template
+++ b/openam-agents/jee-agents/jee-agents-distribution/jee-agents-distribution-weblogic-v10/src/main/assembly/config/OpenSSOAgentConfiguration.template
@@ -32,7 +32,7 @@
 # OpenAM Policy Agent for:
 # BEA WebLogic 10.0 Server/Portal
 #
-# Version: 3.0
+# Version: ${project.version}
 #------------------------------------------------------------------------------
 #
 # THIS FILE PROVIDES THE CONFIGURATION SETTINGS NECESSARY FOR THE AGENT
