--- a/openam-agents/jee-agents/jee-agents-distribution/jee-agents-distribution-websphere-v61/src/main/assembly/config/OpenSSOAgentConfiguration.template
+++ b/openam-agents/jee-agents/jee-agents-distribution/jee-agents-distribution-websphere-v61/src/main/assembly/config/OpenSSOAgentConfiguration.template
@@ -32,7 +32,7 @@
 # OpenAM Policy Agent for:
 # IBM Websphere 6.1
 #
-# Version: 3.0
+# Version: ${project.version}
 #------------------------------------------------------------------------------
 #
 # THIS FILE PROVIDES THE CONFIGURATION SETTINGS NECESSARY FOR THE AGENT
